--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,41 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  background-color: black;
+  font-size: 20px;
+  font-family: 'Work Sans', sans-serif;
+}
+
+p {
+  color: white;
+  padding: 0;
+  margin: 0;
+}
+
+button.clicker {
+  font-size: 20px;
+  background-color: blue;
+  color: white;
+  margin-bottom: 7.5px;
+  border-radius: 10px;
+}
+
+button.upgrade-btn {
+    font-size: 15px;
+    background-color: yellow;
+    color: black;
+    border-radius: 10px;
+  }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
+.aligner-item {
+    max-width: 50%;
+}
