added production gems

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,6 +14,10 @@ p {
   margin: 0;
 }
 
+h1, h2, h3, label {
+  color: white;
+}
+
 button.clicker {
   font-size: 20px;
   background-color: blue;
