--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,3 @@
-<html>
-<head>
-</head>
-<body>
-
-<html onload="load()">
 
 	<div class="container">
 	  	<div class="aligner-item">
@@ -14,13 +8,42 @@
 			<button class="upgrade-btn" onClick="buyMonkey()">Buy 1 Monkey</button>
 	    	<p>Monkeys: <span id="monkeys">0</span><br /></p>
 	    	<p>Cost: <span id="monkeyCost">10</span></p>
-
-	    	<%= content_tag :div, class: 'monkey-count', data: {monkey: @monkeys} do %>
-			<% end %>
 	    </div>
 	</div>
 
-	<script type="text/javascript" src="application.js"></script>
+	<script>
+		var beans = 0;
+		var monkeys = 0;
+		var beanNumber = document.getElementById('beans')
 
-</body>
-</html>
+		function beanClick(number) {
+		  beans = beans + number;
+		  document.getElementById("beans").innerHTML = beans;
+		  // save();
+		};
+
+		function buyMonkey() {
+		  var monkeyCost = Math.floor(10 * Math.pow(1.1,monkeys));
+		  if(beans >= monkeyCost) {
+		      monkeys = monkeys + 1;
+		      beans = beans - monkeyCost;
+		      document.getElementById('monkeys').innerHTML = monkeys; 
+		      var nextCost = Math.floor(10 * Math.pow(1.1,monkeys));
+		      document.getElementById('monkeyCost').innerHTML = nextCost;  
+		    };
+		    // save();
+		};
+
+		function timeKeeper() {
+			console.log("tick")
+			monkeyClick();
+			beanNumber.innerHTML = beans;
+			window.setTimeout(function(){ timeKeeper(monkeys); }, 1000);
+		};
+
+		function monkeyClick() {
+			beans += monkeys;
+		}
+
+		timeKeeper();
+	</script>
